--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,13 @@
 <nav>
+    <div class="left">
     <a href="/yugioh">
-        Yu-Gi-Oh! Fantasy Collection!
+        Yu-Gi-Oh! Fantasy <br>Collection!
     </a>
+</div>
+
     <ul>
         <li><a href="./signup">Sign Up</a></li>
         <li><a href="./login">Log In</a></li>
-        <li><a class="button" href="#; ">My Cards</a></li>
+        <li><a class="buttonPink" href="#">My Cards</a></li>
     </ul>
 </nav>
