--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,44 +21,47 @@
         <ul>
             <% cards.forEach(card => { %>
             <li class="tile"><a href="/yugioh/<%= card._id %> ">
-                <div class="tileRow">
-                    <div class="tileColumn">
-                    <img src="<%=card.img%>">
-                  
-                </div>
-               <div class="tileFlexColumn">
-                <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
-                <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
-                <p>Market Price Placeholder</br><span>Price</span></p>
-                <p><%= cardData.data[0].name %> </p>
-                </div>
-            </div>
+                    <div class="tileRow">
+                        <div class="tileColumn">
+                            <img src="<%=card.img%>">
+
+                        </div>
+                        <div class="tileFlexColumn">
+                            <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
+                            <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
+                            <p>Market Price Placeholder</br><span>Price</span></p>
+                            <p><%= cardData.data[0].card_sets[0].set_name %> </p>
+                        </div>
+                    </div>
                 </a></li>
             <% }); %>
         </ul>
 
-<!-- Testing API Start -->
+        <!-- Testing API Start -->
 
-<ul>
-    <% for(let i = 0; i < cardData.data.length; i++ ) { %>
-        <% for( let c = 0; c < cardData.data[0].length; c++ ) { %>
-        <li class="tile">
-            <div class="tileRow">
-                <div class="tileColumn">
-                <img src="<%=cardData.data[i].image_url%>">
-            </div>
-           <div class="tileFlexColumn">
-            <p><i>Yu-Gi-Oh!</br><%= cardData.data[i].card_sets[c].set_name[0]; %></i></p>
-            <p><%= cardData.data[i].card_sets[c].set_rarity; %></br><span class="tileEm"><%= cardData.data[i].name; %></span></p>
-            <p>Market Price</br><span><%= cardData.data[i].card_sets[c].set_price; %></span></p>
-            </div>
-        </div>
-        </li>
-        <% } %>
-    <% } %>
-</ul>
+        <ul>
+            <% for(let i = 0; i < cardData.data.length; i++ ) { %>
+            
+            <li class="tile">
+                        
+                <div class="tileRow">
+                    <div class="tileColumn">
+                            <img src="<%=cardData.data[i].card_images[1]%>">
+                        <% for( let c = 0; c < cardData.data[7].length; c++ ) { %>
+                    </div>
+                    <div class="tileFlexColumn">
+                        <p><i>Yu-Gi-Oh!</br><%= cardData.data[i].card_sets[c].set_name; %></i></p>
+                        <p><%= cardData.data[i].card_sets[c].set_rarity; %></br><span
+                                class="tileEm"><%= cardData.data[i].name; %></span></p>
+                        <p>Market Price</br><span><%= cardData.data[i].card_sets[c].set_price; %></span></p>
+                    </div>
+                </div>
+                <% } %>
+            </li>
+            <% } %>
+        </ul>
 
-<!-- Testing API END -->
+        <!-- Testing API END -->
 
     </div>
 </body>
