--- a/views/myCards.ejs
+++ b/views/myCards.ejs
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cards | Yu-Gi-Oh! Fantasy Collection!</title>
+    <%- include('./partials/styles') %>
+    <title>Card Directory | Yu-Gi-Oh! Fantasy Collection!</title>
 </head>
-<body>
-    <%- include('./partials/headerBlueBtn') %> 
-    <h1>My Cards</h1>
-    <a href="/yugioh/new" class="button">Create New Card</a>
-    <ul>
-        <% cards.forEach(card => { %>
-            <li><a href="/yugioh/<%= card._id %> "><%= card.name; %></a></li> 
-        <% }); %> 
-    </ul>
+
+<body class="navyBlue">
+    <div class="flexColumn">
+        <%- include('./partials/headerPinkBtn') %>
+
+        <div class="headingAndButton">
+            <h1 class="topLeft">All Cards</h1>
+            <a href="/yugioh/new" class="buttonPink">Create New Card</a>
+        </div>
+
+        <ul>
+            <% cards.forEach(card => { %>
+            <li class="tile"><a href="/yugioh/<%= card._id %> ">
+                    <div class="tileRow">
+                        <div class="tileColumn">
+                            <% if(card.img){ %> 
+                            <img src="<%="/public/cardImg/"+card.img%>.jpg" alt="">
+                            <% } else { %>
+                                <img src="<%=card.src%>">
+                                <% } %> 
+
+                        </div>
+                        <div class="tileFlexColumn">
+                            <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
+                            <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
+                            <p>Market Price Placeholder</br><span>Price</span></p>
+                        </div>
+                    </div>
+                </a></li>
+            <% }); %>
+        </ul>
+
+    </div>
 </body>
+
 </html>
