--- a/public/styles.css
+++ b/public/styles.css
@@ -71,8 +71,8 @@ nav ul li{
 
 /* - Tile */
 .tile{
-    width: 415px;
-    height: 283px;
+    width: 440px;
+    height: 320px;
     background-color:white;
     list-style-type: none;
     margin: 0 21.5px 43px 21.5px;
@@ -96,8 +96,8 @@ flex-direction: column;
 }
 
 .tile img{
-width: 173px;
-height: 254px;
+width: 203px;
+height: 284px;
 margin: 10px;
 }
 
@@ -323,4 +323,12 @@ margin-top: 30px;
     margin-left: 30px;
     font-family: 'Montserrat', sans-serif;
 
+}
+
+.smallSubmit{
+    font-size: 18px;
+    padding: 0px;
+    margin-top:0px;
+ width: 200px;
+ height:50px;
 }
