--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,12 @@
                         <div class="tileFlexColumn">
                             <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
                             <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
-                            <p>Market Price Placeholder</br><span>Price</span></p>
+                            <p style="font-weight:700;">Market Price as low as: </br><span style="font-size: 25px;"> $<%= card.price %></span></p>
+
+                            <form action="/yugioh/mycards" method="POST">
+                                <input hidden type="text" value="<%=card._id%>">
+                                <input class="buttonBlue submitButton smallSubmit" type="submit" value="Add to My Cards">
+                            </form>
                         </div>
                     </div>
                 </a></li>
