--- a/views/new.ejs
+++ b/views/new.ejs
@@ -51,7 +51,7 @@
         <input type="text" name="defense"/>
     </label>
     <label>
-        Card Image <input type="file" name="src">
+        Card Image <input type="file" name="src"/>
     </label>
     <div class="submitRight">
     <input class="buttonBlue submitButton" type="submit" value="Create Card" />
