--- a/public/styles.css
+++ b/public/styles.css
@@ -118,6 +118,8 @@ a{
     font-family: 'Montserrat', sans-serif;
 }
 
+
+
 .navyBlue a{
     color: white;
     font-family: 'Montserrat', sans-serif;
@@ -331,4 +333,19 @@ margin-top: 30px;
     margin-top:0px;
  width: 200px;
  height:50px;
+}
+
+.details{
+    font-size: 24px !important;
+    color: #232946 !important;
+    align-items: center;
+    font-weight: 700;
+    text-decoration: underline;
+    margin-top: -20px;
+    margin-bottom:10px;
+}
+
+.wideButton{
+    width: 300px;
+    font-size: 22px;
 }
