--- a/views/partials/headerPinkBtn.ejs
+++ b/views/partials/headerPinkBtn.ejs
@@ -8,7 +8,7 @@
     <ul>
         <% if(user) { %>
             <li><a href="./logout">Logout</a></li>
-            <li><a class="buttonPink" href="#">My Cards</a></li>
+            <li><a class="buttonPink" href="/yugioh/mycards">My Cards</a></li>
             <% } else { %> 
         <li><a href="./signup">Sign Up</a></li>
         <li><a href="./login">Log In</a></li>
