--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,11 +31,13 @@
                                     <% } %> 
                         </div>
                         <div class="tileFlexColumn">
-                            <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
-                            <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
+                            
                         </a>
+                        <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
+                            <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
                             <p style="font-weight:700;">Market Price as low as: </br><span style="font-size: 25px;"> $<%= card.price %></span></p>
-                       
+                            
+                            <a class="details" href="/yugioh/<%= card._id %> ">See Details</a>
 
                             <form action="/yugioh/mycards" method="POST">
                                 <input hidden name="cardId" type="text" value="<%=card._id%>">
