--- a/views/userCards/index.ejs
+++ b/views/userCards/index.ejs
@@ -11,7 +11,7 @@
 
 <body class="navyBlue">
     <div class="flexColumn">
-        <%- include('../partials/headerPinkBtn') %>
+        <%- include('../partials/headerPinkBtnMyCards') %>
 
         <div class="headingAndButton">
             <h1 class="topLeft">My Cards</h1>
