--- a/views/userCards/show.ejs
+++ b/views/userCards/show.ejs
@@ -8,7 +8,7 @@
     <title>My Cards | About <%= card.name %> | Yu-Gi-Oh! Fantasy Collection!</title>
 </head>
 <body class="pink">
-    <%- include("../partials/headerBlueBtn") %>
+    <%- include("../partials/headerBlueBtnMyCards") %>
     <div class="showRow">
         <div class="showImgAndDesc">
             <% if(card.img){ %> 
