--- a/public/styles.css
+++ b/public/styles.css
@@ -70,9 +70,10 @@ nav ul li{
 }
 
 /* - Tile */
+
 .tile{
-    width: 430px;
-    height: 340px;
+    width: 525px;
+    height: 365px;
     background-color:white;
     list-style-type: none;
     margin: 0 21.5px 43px 0px;
@@ -96,8 +97,8 @@ flex-direction: column;
 }
 
 .tile img{
-width: 190px;
-height: 284px;
+width: 230px;
+height: 324px;
 margin: 10px;
 }
 
@@ -106,6 +107,7 @@ margin: 10px;
     flex-direction: column;
     justify-content: space-around;
     align-items:flex-start;
+    margin-top: 5px;
 }
 
 .tileEm{
@@ -200,7 +202,7 @@ label{
 }
 
 input{
-    width: 574px;
+    width: 514px;
     height: 52px;
     display: flex;
     flex-direction: column;
@@ -276,17 +278,20 @@ flex-wrap: wrap;
 
 .priceContainer{
     border: #232946 solid 2px;
-    width: 439px;
-    height: 326px;
+    width: 375px;
+    height: 376px;
+    
 }
 
 .priceContainerInside{
     margin: 24px 16px 15px 15px;
+    width: 350px;
 }
 
 .columnMid{
     margin-left: 68px;
     width: 783px;
+    margin-right: 20px;
 }
 
 .columnMid ul{
