--- a/views/new.ejs
+++ b/views/new.ejs
@@ -40,22 +40,19 @@
     </label>
     <label>
         Attribute/Type:
-        <input type="text" name="cardType"/>
+        <input type="text" name="cardType" />
     </label>
     <label>
         Price:
-        <input type="text" name="price" value="N/A" />
+        <input type="text" name="price" />
     </label>
     <label>
         Attack
-        <input type="text" name="attack"/>
+        <input type="text" name="attack" />
     </label>
     <label>
         Defense
-        <input type="text" name="defense"/>
-    </label>
-    <label>
-        Card Image <input type="file" name="src" required/>
+        <input type="text" name="defense" />
     </label>
 </div>
     <div class="submitRight">
