--- a/views/userCards/show.ejs
+++ b/views/userCards/show.ejs
@@ -48,6 +48,7 @@
 </div>
 </div>
     <div class="returnLink">
+        <a href="/yugioh/mycards/<%=card._id %>/edit">Edit Card</a><br/>
     <a href="/yugioh">Return to Card Directory</a>
 </div>
 </div>
