--- a/views/new.ejs
+++ b/views/new.ejs
@@ -54,6 +54,9 @@
         Defense
         <input type="text" name="defense" />
     </label>
+    <label>
+        Card Image <input type="file" name="img">
+    </label>
 </div>
     <div class="submitRight">
     <input class="buttonBlue submitButton" type="submit" value="Create Card" />
