--- a/views/userCards/index.ejs
+++ b/views/userCards/index.ejs
@@ -21,13 +21,13 @@
         <ul>
           
             <% cards.forEach(card => { %>
-            <li class="tile"><a href="/yugioh/mycards/<%= card._id %> ">
+            <li class="tile"><a tabindex="-1" href="/yugioh/mycards/<%= card._id %> ">
                     <div class="tileRow">
                         <div class="tileColumn">
                             <% if(card.img){ %> 
                             <img src="<%=card.img %>" alt="">
                             <% } else { %>
-                                <img src="<%=card.src%>">
+                                <img src="<%=card.src%>" alt="">
                                    
                                     <% } %> 
                         </div>
@@ -37,10 +37,10 @@
                         <p><i>Yu-Gi-Oh!</br><%= card.boxSet; %></i></p>
                             <p><%= card.rarity; %></br><span class="tileEm"><%= card.name; %></span></p>
                             <p style="font-weight:700;">Market Price as low as: </br><span style="font-size: 25px;"> $<%= card.price %></span></p>
-                            <a class="details" href="/yugioh/mycards/<%= card._id %> ">See Details</a>
+                            <a class="details" href="/yugioh/mycards/<%= card._id %> ">See Details <span class="visually-hidden"> about <%= card.name %> </span></a>
                             <form action="/yugioh/mycards/<%= card.id %>?_method=DELETE" method="POST">
                                 <% console.log(card.id) %> 
-                                <input class="buttonBlue submitButton smallSubmit" type="submit" value="Remove">
+                                <input class="buttonBlue submitButton smallSubmit" type="submit" value="Remove" aria-label="remove <%= card.name %> from my cards">
                             </form>
                         </div>
                     </div>
