Feat: Fixes upload error

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
     <a class="buttonBlue" href="/yugioh"> View All Cards</a>
 </div>
 <div class="formStructure">
-    <form action="/yugioh" method="POST" enctype="multipart/form-data">
+    <form action="/yugioh/mycards" method="POST" enctype="multipart/form-data">
         <div class="formRow">
     <label>
         Card name
@@ -55,7 +55,7 @@
         <input type="text" name="defense" />
     </label>
     <label>
-        Card Image <input type="file" name="img">
+        Card Image <input type="file" name="src">
     </label>
 </div>
     <div class="submitRight">
