Feat: Fixes add to my cards button

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
     <a class="buttonBlue" href="/yugioh"> View All Cards</a>
 </div>
 <div class="formStructure">
-    <form action="/yugioh/mycards" method="POST" enctype="multipart/form-data">
+    <form action="/yugioh" method="POST" enctype="multipart/form-data">
         <div class="formRow">
     <label>
         Card name
