--- a/views/userCards/index.ejs
+++ b/views/userCards/index.ejs
@@ -21,7 +21,7 @@
         <ul>
           
             <% cards.forEach(card => { %>
-            <li class="tile"><a tabindex="-1" href="/yugioh/mycards/<%= card._id %> ">
+            <li class="tile"><a tabindex="-1" href="/yugioh/mycards/<%= card._id %> " aria-hidden="true">
                     <div class="tileRow">
                         <div class="tileColumn">
                             <% if(card.img){ %> 
